Restrict/Allow Visibility in the Outliner from a linked Group doesn't saves info #36672

Closed
opened 2013-09-06 11:05:45 +02:00 by Carlos Mazon · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit, GTX 670 2Gb

- Blender version with error, and version that worked ---

Blender 2.68.0

- Short description of error ---

When you use Restrict/Allow in the Outliner from a linked Group, close the file and open it again, it doesn't saves if you have restricted Visibility, Selection or Renderability.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1- Create a group
2- Link that group in a "main" file
3- Hide the group from the Outliner (also happens with restrict/allow selection and renderability)
4- Close the "main" file and open it again

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, GTX 670 2Gb - Blender version with error, and version that worked --- Blender 2.68.0 - Short description of error --- When you use Restrict/Allow in the Outliner from a linked Group, close the file and open it again, it doesn't saves if you have restricted Visibility, Selection or Renderability. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1- Create a group 2- Link that group in a "main" file 3- Hide the group from the Outliner (also happens with restrict/allow selection and renderability) 4- Close the "main" file and open it again %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It shouldn't be allowed to edit the visibility of a linked group, this button should have been disabled like the buttons for the objects in the group already were. I've fixed that now in svn, thanks for the report.%%%

%%%It shouldn't be allowed to edit the visibility of a linked group, this button should have been disabled like the buttons for the objects in the group already were. I've fixed that now in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36672
No description provided.