Fix #36672: outliner allowed to toggle linked group visibility, which should not be allowed because this is linked data, so any changes would not be saved.